cmake_minimum_required(VERSION 3.1)
# Enable C++11
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
SET(OpenCV_DIR /usr/local/lib/cmake/opencv4)
project(first_sample)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(first_sample first_sample.cpp)
target_link_libraries(first_sample ${OpenCV_LIBS})
